				var test = 1.7976931248623157E+308;
				test.Dump(); // 1.79769312486232E+308
				test.ToString().Dump(); // 1.79769312486232E+308
			- Note the rounding above, even without ToString().
	- Fixed the first row. Resume on fixing the matching on the second row (run unit tests to generate the exception)
		- Message: CollectionAssert.AreEqual failed. (Element at index 2 do not match.)


8/15/18
	- All unit tests now pass. 
		- Updated expected values for floats, too many digits of precision were used so rounding occured. 

8/15/18

Code review comments
	- Fix instances of ITypeConverter<object> - generic should be a primitive type, or the Day enum. Not object
		// Make a factory to get the type converter, or change ITypeConverter<object> to just object
		private readonly IDictionary<Type, ITypeConverter<object>> typeConverters;
	- Fix AppendField
		IFlatFileLayoutDescriptor<TTarget> AppendField<TProperty>(Expression<Func<TTarget, TProperty>> expression, int fieldLength, ITypeConverter<object> typeConverter);
		// ITypeConverter<object> is wrong here, should be TProperty? 
	- If there are any instances of "ITypeConverter<object>" something is wrong, should be TProperty or similar.
	- Remove all instances of "ITypeConverter<object>"
		- AppendField method - clean up generics in this method and in the whole class. 
	- type converter generics, should NOT be object, should be primitive types

	- Started a few of the above changes. Resume here on object vs. ITypeConverter<TProperty> 

8/16/18
	- Started thinking through options for making the TypeConverter strongly typed (vs. object). 
	  Get's tricky because the generic type is not known at compile time for the default type converters.

8/27/18
	- Thinking through how to best handle TypeConverters with a runtime generic. 

8/28/18
	- Added linqpad script for above question.

8/29/18
	- Added quick abstract factory linqpad script for vehicles to get some ideas / practice generics w/ factory pattern