@@ -3,7 +3,7 @@ using FlatFile.FixedWidth.Interfaces;
 
 namespace FlatFile.FixedWidth.Models
 {
-    public class FixedFieldSetting : IFixedFieldSetting
+    public class FixedFieldSetting<T> : IFixedFieldSetting<T>
     {
         public int Length { get; set; }
 
@@ -11,6 +11,6 @@ namespace FlatFile.FixedWidth.Models
 
         public PropertyInfo PropertyInfo { get; set; }
 
-        public object TypeConverter { get; set; }
+        public ITypeConverter<T> TypeConverter { get; set; }
     }
 }
