@@ -77,9 +77,10 @@ namespace FlatFileParserUnitTests.Tests.ParseWithTypeConverter
 
         protected override IFlatFileLayoutDescriptor<DummyEnumModel> GetLayout()
         {
+            ITypeConverter<Day> enumConverter = new DummyEnumTypeConverter();
             return new LayoutDescriptor<DummyEnumModel>()
                 .AppendField(x => x.Id, 2)
-                .AppendField(x => x.DayTest, 10, new DummyEnumTypeConverter())
+                .AppendField(x => x.DayTest, 10, enumConverter)
                 .AppendField(x => x.StringTest, 7);
         }
     }
